// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GameTile> Snapshots > matches current snapshot for can move 1`] = `
<div
  class="player1 hex tile grasshopper"
  draggable="true"
  tabindex="0"
  title="Player-1 grasshopper"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#grasshopper"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > matches current snapshot for no moves 1`] = `
<div
  class="player0 hex tile queen"
  draggable="false"
  title="Player-0 queen"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#queen"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > matches current snapshot for when stacked 1`] = `
<div
  class="player0 hex stacked tile queen"
  draggable="false"
  title="Player-0 queen"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#queen"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > renders creature 1`] = `
<div
  class="player1 hex tile grasshopper"
  draggable="true"
  tabindex="0"
  title="Player-1 grasshopper"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#grasshopper"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > renders creature 2`] = `
<div
  class="player0 hex tile queen"
  draggable="false"
  title="Player-0 queen"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#queen"
    />
  </svg>
</div>
`;
